@@ -39,9 +39,12 @@
 /*           2002-01-27 Build 19                                             */
 /*                                                                           */
 /*****************************************************************************/
-/* $Id: version.c,v 1.36 2008/08/22 19:10:22 alfred Exp $                     */
+/* $Id: version.c,v 1.37 2008/08/29 19:20:10 alfred Exp $                     */
 /***************************************************************************** 
  * $Log: version.c,v $
+ * Revision 1.37  2008/08/29 19:20:10  alfred
+ * - 1.42 Bld 63
+ *
  * Revision 1.36  2008/08/22 19:10:22  alfred
  * - 1.42 Bld62
  *
@@ -188,8 +191,8 @@
 #include "stdinc.h"
 #include <string.h>
 
-char *Version="1.42 Beta [Bld 62]";
-char *DebVersion = "1.42bld62-1";
+char *Version="1.42 Beta [Bld 63]";
+char *DebVersion = "1.42bld63-1";
 LongInt VerNo=0x142f;
 
 char *InfoMessCopyright="(C) 1992,2008 Alfred Arnold";
